--- a/package.json
+++ b/package.json
@@ -18,6 +18,41 @@
     "uuidv4": "^6.1.0"
   },
   "devDependencies": {},
+  {
+  "name": "nodefirebase",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "firebase": "^7.14.6",
+    "firebase-admin": "^8.12.1",
+    "html": "^1.0.0",
+    "uuid": "^8.1.0",
+    "uuidv4": "^6.1.0"
+  },
+  "devDependencies": {},
+   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zews78/PanFC.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zews78/PanFC/issues"
+  },
+  "homepage": "https://github.com/zews78/PanFC#readme",
+  "description": ""
+}
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zews78/PanFC.git"
